examples/test/testpolicy5162.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5162
  namespace: namespace190
spec:
  podSelector:
    matchLabels:
      key38: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value38
      podSelector:
        matchLabels:
          key1: value14
          key49: value41
          key16: value36
